<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ohsanghun.awe_event.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:text="@string/android_onclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:onClick="onClickAndroidActivity" />

        <Button
            android:text="@string/implements_view_onclicklistener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:onClick="onClickActivity" />

        <Button
            android:text="@string/innerclass_setonclicklistener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:onClick="onClickActivity" />

        <Button
            android:text="@string/outter_class_setonclicklistener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:onClick="onClickActivity" />

    </LinearLayout>

</RelativeLayout>
